# GENRx2

./: .gitattributes  .gitignore  LICENSE  README.md
agentcore-voice-agent/agent/: Dockerfile  bot.py  nova_sonic.py  requirements.txt
cdk/: .gitignore  OpenAPI_Swagger_Definition.yaml  cdk.context.json  cdk.json  jest.config.js  package-lock.json  package.json
cdk/data_ingestion/: Dockerfile  pyproject.toml  requirements.txt
cdk/data_ingestion/src/: main.py
cdk/data_ingestion/src/helpers/: cohere_embeddings.py  helper.py  vectorstore.py
cdk/data_ingestion/src/processing/: documents.py
cdk/lambda/: cors_helper.py
cdk/lib/: amplify-stack.ts  api-service-stack.ts  cicd-stack.ts  cloudfront-waf-stack.ts  database-stack.ts  dbFlow-stack.ts  ecs-socket-stack.ts  schema.graphql  turn-server-stack.ts  voice-agent-stack.ts  vpc-stack.ts
cdk/text_generation/: pyproject.toml  requirements.txt
cdk/text_generation/src/: main.py
cdk/text_generation/src/helpers/: chat.py  test_extract_text.py  vectorstore.py
docs/: AGENTCORE_VOICE_AGENT_SETUP.md  ARCHITECTURE_DEEP_DIVE.md  BEDROCK_GUARDRAILS.md  CDK_TECHNICAL_REVIEW.md  CHANGELOG.md  CONTRIBUTING_DOCS.md  CUSTOM_DOMAIN_AND_SES.md  DATABASE_MIGRATIONS.md  DEBRIEF_GENERATION_DEEP_DIVE.md  DEPENDENCY_MANAGEMENT.md  DEPLOYMENT_GUIDE.md  MODIFICATION_GUIDE.md  README.md  USER_GUIDE.md  VOICE_AGENT_DEEP_DIVE.md  api-documentation.md  architecture-diagram.drawio  deploymentGuide.md
frontend/: .env.example  index.html  package-lock.json  package.json  tsconfig.app.json  vite.config.ts
tests/: conftest.py
(+168 files in other folders)
