[tool.poetry]
name = "text-generation"
version = "0.1.0"
description = "Text generation service for empathetic communication"

[tool.poetry.dependencies]
python = "^3.11"
boto3 = "*"
botocore = "*"
langchain = "*"
langchain-aws = "*"
langchain-core = "*"
langchain-community = "*"
langchain-experimental = "*"
langchain-postgres = "*"
python-dotenv = "*"
sqlalchemy = "*"
pgvector = "*"
PyMuPDF = "1.24.10"
psycopg = {extras = ["binary", "pool"], version = "*"}
psycopg2-binary = "*"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"